--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="nav-link" aria-current="page" href="index.html">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="research.html" target="_blank">Research</a>
+            <a class="nav-link" href="research.html">Research</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Publications</a>
