Add the remaining files

--- a/academic.html
+++ b/academic.html
@@ -69,13 +69,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 pe-4">
             <li class="nav-item profile-link">
-              <a class="nav-link" aria-current="page" href="index.html"
-                >Profile</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="research.html">Research</a
-              >
+              <a class="nav-link" href="research.html">Research</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="publications.html">Publications</a>
@@ -97,115 +94,208 @@
       </div>
     </nav>
 
-    <div id="research-creds">
-      <div class="research-creds-hdg">
-        <h2>Research Credentials</h2>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 512 512"
-          width="2rem"
-          fill="#00203f"
-        >
-          <path
-            d="M160 32c0-17.7 14.3-32 32-32h32c17.7 0 32 14.3 32 32c17.7 0 32 14.3 32 32V288c0 17.7-14.3 32-32 32c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32c-17.7 0-32-14.3-32-32V64c0-17.7 14.3-32 32-32zM32 448H320c70.7 0 128-57.3 128-128s-57.3-128-128-128V128c106 0 192 86 192 192c0 49.2-18.5 94-48.9 128H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H320 32c-17.7 0-32-14.3-32-32s14.3-32 32-32zm80-64H304c8.8 0 16 7.2 16 16s-7.2 16-16 16H112c-8.8 0-16-7.2-16-16s7.2-16 16-16z"
-          />
-        </svg>
-      </div>
-      <p>
-        <b>Doctoral Thesis:</b>&nbsp;Development of Novel Hierarchical
-        Nanocomposites for Biomedical Application
-      </p>
+    <div id="academic-service">
+      <h2>Peer Review of Journals</h2>
+      <ul>
+        <li>
+          Reviewer of 1 manuscripts in Materials Chemistry and Physics, Elsevier
+          in <b>2023</b>.
+        </li>
+        <li>
+          Reviewer of 1 manuscripts in Materials Chemistry and Physics, Elsevier
+          in <b>2023</b>.
+        </li>
+        <li>Reviewer of 2 manuscripts in RSC Advances in <b>2024</b>.</li>
+        <li>Reviewer of 5 manuscripts in RSC Advances in <b>2023</b>.</li>
+        <li>
+          Reviewer of 1 manuscript in Scientific Reports, Springer Nature in
+          <b>2023</b>.
+        </li>
+        <li>
+          Reviewer of 1 manuscript in Discover Nano, Springer in <b>2023</b>.
+        </li>
+        <li>
+          Reviewer of 1 manuscript in Journal of Inorganic and Organometallic
+          Polymers and Materials, Springer in <b>2023</b>.
+        </li>
+        <li>
+          Reviewer of 1 manuscript in Polycyclic Aromatic Compound, Taylors and
+          Francis in <b>2023</b>.
+        </li>
+        <li>
+          Reviewer of 2 manuscript in Journal of Materials Chemistry B, RSC in
+          <b>2022</b>.
+        </li>
+        <li>
+          Reviewer of 2 manuscript in Applied Organometallic Chemistry- Wiley
+          Online Library in <b>2022</b>.
+        </li>
+        <li>Reviewer of 1 manuscript in RSC Advances in <b>2022</b>.</li>
+        <li>
+          Reviewer of 1manuscript in GNIT Research Mantra Journal of Science &
+          Technology in <b>2021</b>.
+        </li>
+        <li>
+          Reviewer of 2 manuscripts in Journal of Chemical Technology &
+          Biotechnology in <b>2019</b>.
+        </li>
+        <li>
+          Reviewer of 1manuscript in Journal of Chemical Technology &
+          Biotechnology in <b>2018</b>.
+        </li>
+      </ul>
 
-      <p>
-        <b>Research Interests:</b>&nbsp;Nanoscale FET based biosensor,
-        Neuromorphic Computing, Artificial Intelligence, Block Chain, Wearable
-        Electronics, Nanomedicine, Nanomaterials
-      </p>
+      <h2>Panel Discussion</h2>
+      <ul>
+        <li>
+          Dr. Soumik Podder as Speaker, Ki Hote Chai Episode, DD Bangla LIVE,
+          7th April <b>2023</b>.
+        </li>
+        <div class="ddcontainer"><img src="assets/images/ddbangla.png" alt=""></div>
+      </ul>
 
-      <p><b>Electronics Identifiers:</b></p>
-      <div class="elec-table-container">
-        <div class="elec-id">
-          <table class="elec-id-table">
-            <tr>
-              <th scope="row">SCOPUS ID</th>
-              <td>57191414249</td>
-            </tr>
-            <tr>
-              <th scope="row">ORCHID ID</th>
-              <td>0000-0002-8599-4635</td>
-            </tr>
-            <tr>
-              <th scope="row">Web of Science ID</th>
-              <td>O-6508-2019</td>
-            </tr>
-            <tr>
-              <th scope="row">Vidwan ID</th>
-              <td>
-                <a
-                  href="https://vidwan.inflibnet.ac.in/profile/201346"
-                  class="research-id-links" target = "__blank"
-                  >https://vidwan.inflibnet.ac.in/profile/201346</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">Google Scholar ID</th>
-              <td>
-                <a
-                  href="https://scholar.google.co.in/citations?hl=en&tzom=-330&user=m3GLnfMAAAAJ"
-                  class="research-id-links" target = "__blank"
-                  >https://scholar.google.co.in/citations?hl=en&tzom=-330&user=m3GLnfMAAAAJ</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">Researchgate</th>
-              <td>
-                <a
-                  href="https://www.researchgate.net/profile/Soumik-Podder"
-                  class="research-id-links" target = "__blank"
-                  >https://www.researchgate.net/profile/Soumik-Podder</a
-                >
-              </td>
-            </tr>
-          </table>
-        </div>
+      <h2>Administrative Activity</h2>
 
-        <ul>
-          <li><b>Google Scholar Citations</b>: 186</li>
-          <li><b>h-index</b>: 08</li>
-          <li><b>i10-index</b>: 06</li>
-        </ul>
-      </div>
+      <ul>
+        <li>
+          Member of NAAC Mentor Institute (Guru Nanak Institute of Technology)
+          for implementation of NAAC at Mentee Institute ( Government College of
+          Engineering and Textile Technology, Serampore, West Bengal) and Govt.
+          College of Engineering & Textile Technology, Berhampore in
+          <b>2023</b>.
+        </li>
+        <li>
+          Evaluator in Model Display at FoodEnvision organized by Food
+          Technology, Guru Nanak Institute of Technology, 02nd September
+          <b>2022</b>, Kolkata.
+        </li>
+        <li>
+          College Blue Scrutiny Committee member for JIS ACADEMIC AWARDS-JIS
+          SAMMAN <b>2023</b>.
+        </li>
+        <li>
+          Core Committee (E&C) member of Forum of Scientist Engineers &
+          Technologists (FOSET) Academic Meet <b>2022</b>.
+        </li>
+        <li>
+          Chair Person/ Moderator of Track IV in Institution’s Innovation
+          Council (IIC), MOE, Govt. of India Regional Meet at Guru Nanak
+          Institute of Technology, Kolkata, <b>2022</b>.
+        </li>
+        <li>
+          Session Chair of Track III in Technical Paper Presentation at AICTE
+          Sponsored International Conference on Communication, Computing and
+          Microwave Technology organized by Department of Electronics and
+          Communication Engineering, Guru Nanak Institute of Technology,
+          Kolkata, <b>2022</b>
+        </li>
+        <li>
+          Co-coordinator of NAAC Committee (Criteria 3) at Guru Nanak Institute
+          of Technology, Kolkata in <b>2022</b>
+        </li>
+        <li>
+          Editor, GNIT Research Mantra Journal of Science & Technology in
+          <b>2021</b>
+        </li>
+        <li>
+          Coordinator, Diploma Electronics and Telecommunication Engineering of
+          Guru Nanak Institute of Technology, Kolkata ( 01-04-<b>2021</b> to
+          till now)
+        </li>
+        <li>
+          Coordinator, Syllabus Design of Block Chain for 8th Semester ECE, JIS
+          Group, Kolkata
+        </li>
+        <li>
+          Room Coordinator, Track 1B of 2nd International Conference on
+          Frontiers in Engineering, Management and Applied Science (FEMAS
+          <b>2021</b>) organised by IQAC, IIC Cell, Guru Nanak Institute of
+          Technology, Kolkata on 28th -29th January <b>2021</b>
+        </li>
+        <li>
+          Coordinator, Syllabus Design of Electronic Devices, ECE Dept., C V
+          Raman Global University, Odissa
+        </li>
+      </ul>
 
-      <div class="society">
-        <h2>Professional Society Memberships</h2>
-        <p>International Bodies</p>
-        <ul class="prof-body-list">
-          <li>
-            IEEE Membership, IEEE Electron Devices Society, IEEE Photonics
-            Society, , IEEE Computer Society Task Force on Biological,
-            Artificial and Hybrid Intelligence, IEEE Computer Society Technical
-            Community on Intelligent Informatics and IEEE Photonics S Membership
-            (Member No.-90936569)
-          </li>
-          <li>
-            American Chemical Society Premium Member (Membership No.- 33627316)
-          </li>
-          <li>American Physical Society (Membership No.- 62157331)</li>
-          <li>
-            American Association for The Advancement of Science (AAAS) [SCIENCE]
-            (Membership No.- 60553590)
-          </li>
-        </ul>
-        <p>National Bodies</p>
-        <ul>
-          <li>
-            FORUM OF SCIENTISTS, ENGINEERS & TECHNOLOGISTS : LIFE MEMBER
-            (Membership No. LM/2023-2516)
-          </li>
-        </ul>
-      </div>
+      <h2>Additional Academic Responsibilities</h2>
+
+      <ul>
+        <li>
+          Session Chair of AICTE Sponsored International Conference on
+          Communication, Computing and Nano-Microwave Technology held at Guru
+          Nanak Institute of Technology, Kolkata from 08-09th July, <b>2022</b>.
+        </li>
+        <li>
+          Session Chair, Track 4, 2nd International Conference on Frontiers in
+          Engineering, Management and Applied Science (FEMAS <b>2021</b>)
+          organised by IQAC, IIC Cell, Guru Nanak Institute of Technology,
+          Kolkata on 28th -29th January <b>2021</b>
+        </li>
+        <li>
+          Paper Setter for End Semester (Even) Examination June <b>2022</b> and
+          June <b>2021</b>
+        </li>
+        <li>
+          Paper Setter for End Semester (Odd) Examination December
+          <b>2021</b> and December <b>2020</b> and December <b>2019</b>.
+        </li>
+        <li>
+          Examiner for End Semester (Even) Examination, June <b>2022</b> ,
+          <b>2021</b>, <b>2020</b>.
+        </li>
+        <li>
+          Examiner for End Semester (Odd) Examination, December <b>2021</b>,
+          <b>2020</b> and <b>2019</b>.
+        </li>
+        <li>Scrutinizer for End Semester Special Examination (<b>2019</b>)</li>
+        <li>
+          Examiner II for rechecking of Summer Quarter Examination (<b>2019</b>)
+        </li>
+        <li>Examiner for End Semester Special Examination (<b>2019</b>).</li>
+        <li>Reviewer for End Semester (Odd) Examination <b>2019</b>.</li>
+      </ul>
+
+      <h2>Invited Lectures</h2>
+
+      <ul>
+        <li>
+          <b>Planning and Decision Making in AI</b> at One Week Student Development
+          Programme' on “Application of Data Science, AI & Machine learning
+          using python organised by ECE Dept.,Guru Nanak Institute of
+          Technology, Kolkata on 21st April 2021
+        </li>
+        <li>
+          <b>
+            Workshop on Citation and H-Index for Researchers: Calculate Your
+            Research Footprint
+          </b> organized by R&D Cell, Guru Nanak Institute of
+          Technology, Kolkata on 27.03.2021.
+        </li>
+      </ul>
+
+      <h2>Faculty Development Program Coordinated</h2>
+
+      <ul>
+        <li>Faculty Development Program on <b>
+          Electronic Devices, Image Processing and Machine
+            Learning
+        </b> in association with Institute of Engineers (India) organized by Department of 
+          Electronics and Communication Engineering, Guru Nanak Institute of Technology, 
+          Kolkata from 11th
+          -15th August 2020.</li>
+      </ul>
+
+      <h2>Short Term Training Program Organized</h2>
+
+      <ul>
+        <li> AICTE Sponsored Short Term Training Program on “<b>
+          Theory & Applications of Machine
+            Learning and Data Analytics Technique
+        </b>” from 16th
+          -21st December 2019, organized by C 
+          V Raman College if Engineering, Odisha, </li>
+      </ul>
     </div>
 
     <footer>
