--- a/achievements.html
+++ b/achievements.html
@@ -74,8 +74,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="research.html">Research</a
-              >
+              <a class="nav-link" href="research.html">Research</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="publications.html">Publications</a>
@@ -87,7 +86,9 @@
               <a class="nav-link" href="achievements.html">Achievements</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="academic.html">Academic/Professional Service</a>
+              <a class="nav-link" href="academic.html"
+                >Academic/Professional Service</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="workshops.html">Workshops</a>
@@ -97,115 +98,106 @@
       </div>
     </nav>
 
-    <div id="research-creds">
-      <div class="research-creds-hdg">
-        <h2>Research Credentials</h2>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 512 512"
-          width="2rem"
-          fill="#00203f"
-        >
-          <path
-            d="M160 32c0-17.7 14.3-32 32-32h32c17.7 0 32 14.3 32 32c17.7 0 32 14.3 32 32V288c0 17.7-14.3 32-32 32c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32c-17.7 0-32-14.3-32-32V64c0-17.7 14.3-32 32-32zM32 448H320c70.7 0 128-57.3 128-128s-57.3-128-128-128V128c106 0 192 86 192 192c0 49.2-18.5 94-48.9 128H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H320 32c-17.7 0-32-14.3-32-32s14.3-32 32-32zm80-64H304c8.8 0 16 7.2 16 16s-7.2 16-16 16H112c-8.8 0-16-7.2-16-16s7.2-16 16-16z"
-          />
-        </svg>
-      </div>
-      <p>
-        <b>Doctoral Thesis:</b>&nbsp;Development of Novel Hierarchical
-        Nanocomposites for Biomedical Application
-      </p>
-
-      <p>
-        <b>Research Interests:</b>&nbsp;Nanoscale FET based biosensor,
-        Neuromorphic Computing, Artificial Intelligence, Block Chain, Wearable
-        Electronics, Nanomedicine, Nanomaterials
-      </p>
-
-      <p><b>Electronics Identifiers:</b></p>
-      <div class="elec-table-container">
-        <div class="elec-id">
-          <table class="elec-id-table">
-            <tr>
-              <th scope="row">SCOPUS ID</th>
-              <td>57191414249</td>
-            </tr>
-            <tr>
-              <th scope="row">ORCHID ID</th>
-              <td>0000-0002-8599-4635</td>
-            </tr>
-            <tr>
-              <th scope="row">Web of Science ID</th>
-              <td>O-6508-2019</td>
-            </tr>
-            <tr>
-              <th scope="row">Vidwan ID</th>
-              <td>
-                <a
-                  href="https://vidwan.inflibnet.ac.in/profile/201346"
-                  class="research-id-links" target = "__blank"
-                  >https://vidwan.inflibnet.ac.in/profile/201346</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">Google Scholar ID</th>
-              <td>
-                <a
-                  href="https://scholar.google.co.in/citations?hl=en&tzom=-330&user=m3GLnfMAAAAJ"
-                  class="research-id-links" target = "__blank"
-                  >https://scholar.google.co.in/citations?hl=en&tzom=-330&user=m3GLnfMAAAAJ</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">Researchgate</th>
-              <td>
-                <a
-                  href="https://www.researchgate.net/profile/Soumik-Podder"
-                  class="research-id-links" target = "__blank"
-                  >https://www.researchgate.net/profile/Soumik-Podder</a
-                >
-              </td>
-            </tr>
-          </table>
-        </div>
-
-        <ul>
-          <li><b>Google Scholar Citations</b>: 186</li>
-          <li><b>h-index</b>: 08</li>
-          <li><b>i10-index</b>: 06</li>
-        </ul>
+    <div id="awards">
+      <div class="awards-hdg-container">
+        <h2>Awards and Achievements</h2>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="3rem" height="2rem" fill="#00203f"><path d="M400 0H176c-26.5 0-48.1 21.8-47.1 48.2c.2 5.3 .4 10.6 .7 15.8H24C10.7 64 0 74.7 0 88c0 92.6 33.5 157 78.5 200.7c44.3 43.1 98.3 64.8 138.1 75.8c23.4 6.5 39.4 26 39.4 45.6c0 20.9-17 37.9-37.9 37.9H192c-17.7 0-32 14.3-32 32s14.3 32 32 32H384c17.7 0 32-14.3 32-32s-14.3-32-32-32H357.9C337 448 320 431 320 410.1c0-19.6 15.9-39.2 39.4-45.6c39.9-11 93.9-32.7 138.2-75.8C542.5 245 576 180.6 576 88c0-13.3-10.7-24-24-24H446.4c.3-5.2 .5-10.4 .7-15.8C448.1 21.8 426.5 0 400 0zM48.9 112h84.4c9.1 90.1 29.2 150.3 51.9 190.6c-24.9-11-50.8-26.5-73.2-48.3c-32-31.1-58-76-63-142.3zM464.1 254.3c-22.4 21.8-48.3 37.3-73.2 48.3c22.7-40.3 42.8-100.5 51.9-190.6h84.4c-5.1 66.3-31.1 111.2-63 142.3z"/></svg>
       </div>
 
-      <div class="society">
-        <h2>Professional Society Memberships</h2>
-        <p>International Bodies</p>
-        <ul class="prof-body-list">
-          <li>
-            IEEE Membership, IEEE Electron Devices Society, IEEE Photonics
-            Society, , IEEE Computer Society Task Force on Biological,
-            Artificial and Hybrid Intelligence, IEEE Computer Society Technical
-            Community on Intelligent Informatics and IEEE Photonics S Membership
-            (Member No.-90936569)
-          </li>
-          <li>
-            American Chemical Society Premium Member (Membership No.- 33627316)
-          </li>
-          <li>American Physical Society (Membership No.- 62157331)</li>
-          <li>
-            American Association for The Advancement of Science (AAAS) [SCIENCE]
-            (Membership No.- 60553590)
-          </li>
-        </ul>
-        <p>National Bodies</p>
-        <ul>
-          <li>
-            FORUM OF SCIENTISTS, ENGINEERS & TECHNOLOGISTS : LIFE MEMBER
-            (Membership No. LM/2023-2516)
-          </li>
-        </ul>
-      </div>
+      <ol>
+        <li>
+          <b>Assistant Dean of International Affairs</b>, SR University,
+          Warangal-506371, Telangana State, India
+        </li>
+        <li>
+          Session Chair at Technical Session: VLSI Design & Embedded Systems, in
+          the 4th International Conference on Microelectronics, Computing
+          Systems, Machine Learning & Internet of Things (MCMI-2023) organized
+          by ISVE at Advanced Regional Telecom Training Centre, BSNL, Hazaribag
+          Road, Ranchi-835217, Jharkhand, India during Nov. 25-26th,
+          <b>2023</b> in Virtual Mode.
+        </li>
+        <li>
+          "<b>Advanced Learner</b>" Badge in 5 day online FDP on "AICTE/UGC LOCF
+          Examination Reforms" held on 09th-13th October, <b>2023</b> conducted
+          by the Department of Education and Controller of Examination of JIS
+          University.
+        </li>
+        <li>
+          <b>Editor</b> for the book series titled
+          <b
+            >"Futuristic Trends in Chemical Material Sciences & Nano
+            Technology"</b
+          >
+          IIP Proceedings, <b>2023</b>.
+        </li>
+        <li>
+          <b>Certified Reviewer</b> of American Chemical Society by ACS Review
+          Lab, 2023.
+        </li>
+        <li>
+          Invited <b>Panel Discussion</b> Resource person in Scholastic Book
+          Fair on 2nd May, <b>2023</b> at GNIEST.
+        </li>
+        <li>
+          Certified by Coursera for completion of "Understanding Research
+          Methods" authorized by University of London and SOAS University of
+          London in <b>2022</b>.
+        </li>
+        <li>
+          <b>Mentor</b> of TEAM-Model DISPLAY:
+          <b>SMART GLOVES FOR PHYSICALLY CHALLENGED PERSON"</b> 2<sup>nd</sup>
+          Runner up in JISTECHK22-8<sup>th</sup> TECHNICAL SYMPOSIUM
+          <b>2022</b>.
+        </li>
+        <li>
+          <b>Elite</b> Award NPTEL Course of Fundamentals of Artificial
+          Intelligence in July-December <b>2020</b>.
+        </li>
+        <li>
+          <b>ELITE</b> Award in NPTEL Course of Introductory Neuroscience and
+          Neuroinstrumentation in July to December <b>2020</b>.
+        </li>
+        <li>
+          <b>Best Video Lecture</b> in ECE department of Guru Nanak Institute of
+          Technology, Kolkata in the week of 13<sup>th</sup> July-17<sup
+            >th</sup
+          >
+          July <b>2020</b>.
+        </li>
+        <li>
+          <b>3<sup>rd</sup> position</b> in order of merit at PhD in Engineering
+          from Jadavpur University, <b>2019</b>.
+        </li>
+        <li>
+          <b>First Prize in Poster presentation</b> at 2<sup>nd</sup> National
+          Conference "Information, Photonics and Communication <b>2019</b>"
+          (ICPC'19), 01.02.2019-03.02.2029 held at B.P Poddar Institute of
+          Management and Technology.
+        </li>
+        <li>
+          Reserve listed for <b>NEWTON-BHA Fellowship</b> (collaboration with
+          Lancaster University, United Kingdom) in <b>2017</b>
+        </li>
+        <li>
+          Awardees of <b>DST-INSPIRE Senior Research Fellow</b> in <b>2016</b>.
+        </li>
+        <li>
+          Awardees of <b>DST-INSPIRE Junior Research Fellow</b> in <b>2014</b>.
+        </li>
+        <li><b>Gold medalist</b> in M.Tech in <b>2012</b>.</li>
+        <li>
+          <b>Gate qualified</b> in Electronics & Communication Engineering in
+          <b>2013</b> and <b>2010</b>.
+        </li>
+        <li>
+          <b>75 rank</b> in Secondary Examination with National Scholarship in
+          <b>1998</b>
+        </li>
+        <li>
+          <b>National Merit Certificate</b> in Madhyamik Pariksha in <b>1998</b>
+        </li>
+      </ol>
     </div>
 
     <footer>
