Change the background color dropdown button in footer for mobile devices

--- a/academic.html
+++ b/academic.html
@@ -301,7 +301,7 @@
     <footer>
       <div class="dropup">
         <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Background Color
+          Color
         </button>
         <ul class="dropdown-menu">
           <li>
