--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <footer>
       <div class="dropup">
         <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Background Color
+          Color
         </button>
         <ul class="dropdown-menu">
           <li>
