--- a/publications.html
+++ b/publications.html
@@ -670,7 +670,7 @@
     <footer>
       <div class="dropup">
         <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Background Color
+          Color
         </button>
         <ul class="dropdown-menu">
           <li>
