Add 'designed by' link to the footer, add ::selection colors, minor style changes

--- a/academic.html
+++ b/academic.html
@@ -349,7 +349,7 @@
         </ul>
       </div>
       <p>Soumik Podder - Portfolio 2024</p>
-      <p>Designed by <a href="">A</a></p>
+      <p>Designed by <a class="abhijeet" href="https://www.linkedin.com/in/abhjt-srkr/" target="_blank" rel="noreferrer">A.S.</a></p>
     </footer>
 
     <script
