--- a/research.html
+++ b/research.html
@@ -259,8 +259,7 @@
         </ul>
       </div>
       <p>Soumik Podder - Portfolio 2024</p>
-      <p>Designed by <a href="">A</a></p>
-    </footer>
+      <p>Designed by <a class="abhijeet" href="https://www.linkedin.com/in/abhjt-srkr/" target="_blank" rel="noreferrer">A.S.</a></p>    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
