--- a/academic.html
+++ b/academic.html
@@ -348,7 +348,7 @@
           </li>
         </ul>
       </div>
-      <p>Soumik Podder - Portfolio 2024</p>
+      <p><a href="https://www.linkedin.com/in/dr-soumik-podder-504502189/" class="abhijeet" target="_blank" rel = "noreferrer">Soumik Podder</a> - Portfolio 2024</p>
       <p>Designed by <a class="abhijeet" href="https://www.linkedin.com/in/abhjt-srkr/" target="_blank" rel="noreferrer">A.S.</a></p>
     </footer>
 
