Change footer padding for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
           </li>
         </ul>
       </div>
-      <p><a href="https://www.linkedin.com/in/dr-soumik-podder-504502189/" class="abhijeet" target="_blank" rel = "noreferrer">Soumik Podder</a> - Portfolio 2024</p>
+      <p class="soumiklinkedin"><a href="https://www.linkedin.com/in/dr-soumik-podder-504502189/" class="abhijeet" target="_blank" rel = "noreferrer">Soumik Podder</a> - Portfolio 2024</p>
       <p>Designed by <a class="abhijeet" href="https://www.linkedin.com/in/abhjt-srkr/" target="_blank" rel="noreferrer">A.S.</a></p>
     </footer>
 
