Add 'Executive MBA' point in educational qualification section and change teaching experience to 7 years

--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@
                 >Executive M.Tech in Artificial Intelligence and Machine
                 Learning</b
               >
-              at <b>IIT Kanpur</b> in 2023
+              at <b>IIT Kanpur</b> in 2023.
+            </li>
+            <li>
+              Selected for <b>Executive MBA</b> at <b>IIM Kashipore, Dehradun</b> in January 2024.
             </li>
           </ul>
           <div class="edu-table">
@@ -231,7 +234,7 @@
         <div class="education">
           <h2 class="personal-details-hdg">Professional Experience</h2>
           <ul>
-            <li><b>Academic:</b>&nbsp;6 years and 9 months</li>
+            <li><b>Academic:</b>&nbsp;7 years</li>
             <li><b>Research:</b>&nbsp;5 years</li>
             <li><b>Industrial:</b>&nbsp;1 year</li>
           </ul>
